WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139495
Fix iOS builders for 8.0
https://bugs.webkit.org/show_bug.cgi?id=139495
Summary
Fix iOS builders for 8.0
Enrica Casucci
Reported
2014-12-10 10:37:14 PST
This bug tracks the work required to make sure ToT WebKit builds on 8.0 and 8.1.
Attachments
Patch
(6.25 KB, patch)
2014-12-10 10:53 PST
,
Enrica Casucci
eric.carlson
: review+
Details
Formatted Diff
Diff
Patch2
(5.42 KB, patch)
2014-12-16 11:50 PST
,
Enrica Casucci
jer.noble
: review+
Details
Formatted Diff
Diff
Patch to fix the device build
(3.87 KB, patch)
2014-12-16 17:26 PST
,
Enrica Casucci
msaboff
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2014-12-10 10:53:45 PST
Created
attachment 243047
[details]
Patch
Enrica Casucci
Comment 2
2014-12-10 11:25:00 PST
Fix for simulator build. Committed revision 177081.
Enrica Casucci
Comment 3
2014-12-16 11:50:46 PST
Created
attachment 243372
[details]
Patch2 New patch with the correct build number checks.
Jeremy Jones
Comment 4
2014-12-16 14:51:40 PST
This will disable video fullscreen when building against iOS 8.0 SDK
Enrica Casucci
Comment 5
2014-12-16 17:26:26 PST
Created
attachment 243409
[details]
Patch to fix the device build
Michael Saboff
Comment 6
2014-12-16 17:32:52 PST
Comment on
attachment 243409
[details]
Patch to fix the device build r=me
Geoffrey Garen
Comment 7
2014-12-16 17:37:12 PST
Looks good to me.
Enrica Casucci
Comment 8
2014-12-16 17:39:27 PST
Committed revision 177421.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug