Source/WebCore/platform/ios/WebVideoFullscreenControllerAVKit.mm
@@ -37,7 +37,7 @@
 
 using namespace WebCore;
 
-#if __IPHONE_OS_VERSION_MIN_REQUIRED < 80000
+#if __IPHONE_OS_VERSION_MIN_REQUIRED <= 80200
 
 @implementation WebVideoFullscreenController
 - (void)setVideoElement:(WebCore::HTMLVideoElement*)videoElement
@@ -50,9 +50,14 @@ using namespace WebCore;
     return nullptr;
 }
 
-- (void)enterFullscreen:(UIView *)view
+- (void)enterFullscreen:(UIView *)view mode:(WebCore::HTMLMediaElement::VideoFullscreenMode)mode
 {
     UNUSED_PARAM(view);
+    UNUSED_PARAM(mode);
+}
+
+- (void)requestHideAndExitFullscreen
+{
 }
 
 - (void)exitFullscreen
