Source/WebKit2/UIProcess/ios/WebVideoFullscreenManagerProxy.mm
@@ -49,7 +49,9 @@
 using namespace WebCore;
 
 namespace WebKit {
-    
+
+#if __IPHONE_OS_VERSION_MIN_REQUIRED > 80200
+
 PassRefPtr<WebVideoFullscreenManagerProxy> WebVideoFullscreenManagerProxy::create(WebPageProxy& page)
 {
     return adoptRef(new WebVideoFullscreenManagerProxy(page));
@@ -228,6 +230,7 @@ void WebVideoFullscreenManagerProxy::selectLegibleMediaOption(uint64_t index)
 {
     m_page->send(Messages::WebVideoFullscreenManager::SelectLegibleMediaOption(index), m_page->pageID());
 }
+#endif
 
 } // namespace WebKit
 
